# sologger-geyser-plugin

./: .gitignore  Cargo.toml  Dockerfile-logstash  Dockerfile-otel  README.md
.github/workflows/: release.yml  rust.yml
config/: sologger-geyser-plugin-config.json
config/local/: log4rs-config.yml  sologger-config.json
docker-examples/: README.md
docker-examples/docker-parseable/: README.md  docker-compose.yaml  log4rs-config.yml  sologger-config.json
docker-examples/docker-signoz/: README.md
docker-examples/docker-signoz/docker/clickhouse-setup/: docker-compose.yaml
docker-examples/docker-signoz/docker/clickhouse-setup/data/signoz/: signoz.db
docker-examples/docker-signoz/docker/clickhouse-setup/data/zookeeper-1/data/version-2/: snapshot.3e0  snapshot.40b  snapshot.461
docker-examples/docker-signoz/docker/clickhouse-setup/sologger/: log4rs-config.yml  sologger-config.json
dockerfile-config/: sologger-geyser-plugin-config.json
dockerfile-config/local/: log4rs-config.yml  sologger-config.json
scripts/: check_errors.sh  run.sh  run_otel.sh
src/: config_loader.rs  entrypoint.rs  geyser_plugin_sologger.rs  geyser_plugin_sologger_config.rs  inner_transaction.rs  lib.rs  log_processor.rs  logger_lib.rs  sologger_config.rs
