[package]
name = "sologger-geyser-plugin"
version = "1.0.0"
edition = "2021"
authors = ["Will Kennedy"]
description = "Solana Geyser Plugin to parse raw logs emitted from a Solana RPC into structured logs and transport Solana logs to either a LogStash or OpenTelemetry endpoint via TCP"
repository = "https://github.com/brytelands/sologger-geyser-plugin"
categories = ["development-tools::debugging"]
license = "Apache-2.0"
keywords = ["solana", "geyser", "logging", "sologger", "otel"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agave-geyser-plugin-interface = "2.0.13"
solana-logger = "2.0.13"
solana-sdk = "2.0.13"
solana-transaction-status = "2.0.13"
sologger_log_context = "0.2.0"
sologger_log_transformer = "0.2.0"
sologger_log_transport = "0.2.0"
log = "0.4.22"
bs58 = "0.5.1"
log4rs = "1.3.0"
anyhow = "1.0.89"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
crossbeam-deque = "0.8.5"

tokio = { version = "1.0", features = ["sync", "rt"], optional = true }

[features]
enable_otel = ["sologger_log_transport/otel", "tokio"]
enable_logstash = ["sologger_log_transport/logstash"]